# c-streamer

./: CMakeLists.txt  buffer.c  buffer.h  main.c  rtmp.c  rtmp.h
amf/: amf.c  amf.h
channel/: channel.c  channel.h
global/: global.c  global.h
mp4/: mp4.c  mp4.h
rtmp/: handshake.c  message.c  rtmp.c  rtmp.h
util/: buffer.c  buffer.h  generic.c  generic.h  list.c  list.h  map.c  map.h  queue.c  queue.h
